# e4rat-lite

./: CMakeLists.txt  README  README.md  e4rat-lite.conf  e4rat-lite.conf_en_US  e4rat-lite.conf_pt_BR  e4rat.conf.sample
conf/: e4rat-lite.conf_en_US  e4rat-lite.conf_pt_BR
doc/: CMakeLists.txt  e4rat-lite-collect.pod  e4rat-lite-preload.pod  e4rat-lite-realloc.pod  e4rat-lite.conf.pod  e4rat-realloc.pod
doc/en_US/: e4rat-lite-collect.pod  e4rat-lite-preload.pod  e4rat-lite-realloc.pod  e4rat-lite.conf.pod
doc/pt_BR/: e4rat-lite-collect.pod  e4rat-lite-preload.pod  e4rat-lite-realloc.pod  e4rat-lite.conf.pod
e4rat/: CMakeLists.txt  README  e4rat.conf.sample
e4rat-0.2.1/: CMakeLists.txt  README
e4rat-0.2.1/debian/: preinst
e4rat-0.2.1/kernel-patches/: ext4-fix-defrag-for-running-executable.patch  ext4_add_ext4_ioc_control_pa.patch
e4rat-0.2.1/src/: CMakeLists.txt  buddycache.cc  common.hh  defrag.cc  defrag.hh  device.cc  device.hh  e4rat-collect.cc  e4rat-offsets.cc  e4rat-preload.cc  fiemap.cc  fiemap.hh  fileptr.cc  fileptr.hh  listener.cc  listener.hh  logging.cc  signals.hh
e4rat-0.2.1/src/cmake/: Findblkid.cmake
e4rat-preload-lite/: Makefile  e4rat-preload-lite.c
e4rat/debian/: postrm
e4rat/doc/: CMakeLists.txt  e4rat-collect.pod  e4rat-preload.pod  e4rat-realloc.pod  e4rat.conf.pod
e4rat/kernel-patches/: delalloc-debug-ioctl  ext4_add_ext4_ioc_get_pa.patch
e4rat/src/: CMakeLists.txt  balloc.h  common.cc  device.cc  device.hh  e4rat-preload.cc  eventcatcher.hh  fiemap.cc  listener.cc  parsefilelist.hh  singleton.hh
e4rat/src/cmake/: Findauparse.cmake
kernel-patches/: ext4-fix-defrag-for-running-executable.patch  ext4_sort_and_merge_inode_pa.patch
po/: CMakeLists.txt  e4rat-lite.pot  pt_BR.po
src/: CMakeLists.txt  buddycache.cc  buddycache.hh  common.cc  common.hh  config.c  config.cc  config.h  config.hh  defrag.cc  device.cc  device.hh  e4rat-collect.cc  e4rat-offsets.cc  e4rat-preload.c  e4rat-preload.cc  e4rat-realloc.cc  eventcatcher.cc  fiemap.cc  intl.hh  listener.cc  listener.hh  logging.cc  logging.hh  parsefilelist.hh
src/cmake/: Findaudit.cmake  Findauparse.cmake  Findext2fs.cmake
tools/: clean_build.sh  test_build.sh  test_po.sh  update_po.sh
